<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagamentoInformacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/orientacao_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamentoTituloValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamentoInformacao" />

    <TextView
        android:id="@+id/pagamentoValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamentoTituloValor"
        app:layout_constraintTop_toBottomOf="@+id/pagamentoTituloValor"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamentoNumeroCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamentoValor"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pagamentoMesValidadeCartao"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:hint="@string/mes_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamentoCvcCartao"
        app:layout_constraintStart_toStartOf="@+id/pagamentoNumeroCartao"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamentoAnoValidadeCartao"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:hint="@string/ano_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamentoCvcCartao"
        app:layout_constraintStart_toEndOf="@+id/pagamentoMesValidadeCartao"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/pagamentoCvcCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc_cartao"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="@+id/pagamentoNumeroCartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamentoNumeroCartao" />

    <EditText
        android:id="@+id/pagamentoNomeCartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mascara_nome_no_cartao"
        android:hint="@string/nome_no_cartao"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/pagamentoCvcCartao"
        app:layout_constraintStart_toStartOf="@+id/pagamentoMesValidadeCartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamentoMesValidadeCartao"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/pagamentoBotaoFinalizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/finalizar_compra"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/pagamentoNomeCartao"
        app:layout_constraintStart_toStartOf="@+id/pagamentoNomeCartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamentoNomeCartao" />
</androidx.constraintlayout.widget.ConstraintLayout>